--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   go_router: ^8.0.1
   url_strategy: ^0.2.0
   js: ^0.6.4
+  flutter_html: ^2.1.2
 
 dev_dependencies:
   flutter_test:
